--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-/bin/
-<<<<<<< HEAD
-<<<<<<< HEAD
-/log/
-=======
->>>>>>> 6e7b2c6 (newish)
-=======
-=======
-/log/
->>>>>>> 62fe245 (Update README.md)
->>>>>>> master
+/# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
